tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:94:23: error: expected ‘)’ before ‘in’
   94 |   printf("%d\n", "ell" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:94:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   94 |   printf("%d\n", "ell" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:95:23: error: expected ‘)’ before ‘in’
   95 |   printf("%d\n", "foo" in s);
      |         ~             ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:95:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   95 |   printf("%d\n", "foo" in s);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s

   1: #include <stdio.h>
